AOT 配置